<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".fragment.HomeFragment">

            <include layout="@layout/header" />
            <!--info block-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="fitXY"
                android:src="@drawable/image_bg" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="16dp"
                android:padding="8dp"
                android:background="@drawable/bg_block_info">

                <RelativeLayout
                    android:id="@+id/infoSteps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/iconFoot"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/foot_red" />

                    <TextView
                        android:id="@+id/today"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_toEndOf="@+id/iconFoot"
                        android:text="@string/today"
                        android:textColor="@color/red"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/numSteps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_toEndOf="@+id/today"
                        android:text="@string/_500"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lastSteps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_toEndOf="@+id/numSteps"
                        android:text="@string/_4_000_steps"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </RelativeLayout>

                <com.lhd.runapp.customviews.MySeekBar
                    android:id="@+id/mySeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_below="@+id/infoSteps"
                    android:layout_centerVertical="true"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="-30dp"
                    android:foregroundGravity="center"
                    app:barColor="@color/bg_seekbar"
                    app:barHeight="20"
                    app:indicatorColor="@color/red"
                    app:progress="0.7"
                    app:progressColor="@color/red" />
            </RelativeLayout>
            <!--Tab layout-->
            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                style="@style/tabLayout"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_tablayout" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="16dp"
                android:background="@drawable/bg_block_info"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="10dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/huyChuong1"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerVertical="true"
                            android:src="@drawable/huy_huong1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/huyChuong1"
                            android:text="@string/recent_achieved_badge"
                            android:textColor="@color/red"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:text="@string/view_all"
                        android:textColor="@color/txtColor2"
                        android:textSize="16sp" />
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="4" />

            </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>